[package]
name = "subspace-regenesis-tool"
version = "0.1.0"
edition = "2021"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"
subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
tokio = { version = "1.17", features = ["rt-multi-thread"] }
